GNOME Bugzilla – Bug 765678
Clicking on "[N] other events" does not show them, shows "New event" dialog instead
Last modified: 2017-04-17 18:20:40 UTC
Hello, I don't think this has been reported elsewhere, please excuse me if I missed something. Using gnome calendar 3.20.1 that ships with a freshly installed Ubuntu 16.04, I have the following problem : In "month" view, when a day contains more events than what is possible to display, I get a "other event" or "[N] other events" link at the bottom of the box. (naming may differ a bit, I use the french localisation and translate from that). With 3.16, when clicking on that link, the remaining events where displayed in a pop-up box. Now, with 3.20, I get a "New event" dialog instead, just as if I had clicked in the blank part of a less-crowded day... Workaround : increase the height of the gnome-agenda window to display all events if possible, or uncheck some of the calendars you display in the "manage you agendas" setting. If window is already at its maximum length, and all the events come from the same calendar... Then I have no solution yet !
Thanks for the report. This is a know issue, and we're trying to fix that.
Created attachment 327476 [details] [review] Besides reverting the faulty change, this patch completely fix the mouse interaction with the "N other events" area.